Now works on windows yippee !